Fixes to snippets in dark mode

--- a/td-documentation-reactjs/src/doc-elements/page/two-sides/TwoSidesLayout.css
+++ b/td-documentation-reactjs/src/doc-elements/page/two-sides/TwoSidesLayout.css
@@ -32,3 +32,11 @@
     background-color: var(--mdoc-inversed-background-color);
     border-left: solid 1px #5b666c;
 }
+
+.page-two-sides-right-part .snippet-container {
+    display: inherit;
+}
+
+.page-two-sides-right-part .snippet-container .snippet { 
+    border-left: none;
+}
